Fix layout bug in input lines in tasks.
Also added a reset.css to have a common ground on (hopefully) all browsers.

--- a/codequiz-server/quiz/static/tasks/style2.css
+++ b/codequiz-server/quiz/static/tasks/style2.css
@@ -136,6 +136,8 @@ img {
 
 pre {
     background-color: #ffffcc;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 #css_version {
@@ -149,7 +151,7 @@ pre {
     color: #233f62;
 }
 
-#pseudo_cell {
+.pseudo_cell {
     vertical-align: top;
 }
 
